--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ a:hover {
 <div class="container mx-auto py-12 px-4 fade-in">
   <h1 class="text-4xl font-bold mb-12 text-center text-gray-800">#FUCKREII</h1>
   <h1 class="text-4xl font-bold mb-12 text-center text-gray-800">the website design will change in the future</h1>
+  <h1 class="text-4xl font-bold mb-12 text-center text-gray-800">made by @feowi_ & @gone07316 on discord</h1>
 
   <!-- TheRebootedLily -->
   <details class="glass-card mb-6">
