--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ a:hover {
 
 <!-- Loading Screen -->
 <div id="loading">
-  <img src="logo.png" alt="Logo"> <!-- Replace with your PNG -->
+  <img src="hi.png" alt="Logo"> <!-- Replace with your PNG -->
 </div>
 
 <div class="container mx-auto py-12 px-4 fade-in">
