--- a/index.html
+++ b/index.html
@@ -6,37 +6,24 @@
 <title>#FUCKREII</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-/* Loading screen */
-#loading {
-  position: fixed; top:0; left:0;
-  width: 100%; height: 100%;
-  background: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 50;
-}
-
-#loading img {
+/* Logo always top-left, always visible */
+#logo {
+  position: fixed;
+  top: 20px;
+  left: 20px;
   width: 150px;
   height: auto;
   opacity: 0;
   transform: translateY(20px);
   transition: opacity 1.5s ease, transform 1.5s ease;
+  z-index: 1000; /* stays on top */
 }
-
-#loading.show img {
+#logo.show {
   opacity: 1;
   transform: translateY(0);
 }
 
-@keyframes fadeUp {
-  0% {opacity: 0; transform: translateY(20px);}
-  50% {opacity: 1; transform: translateY(0);}
-  100% {opacity: 1; transform: translateY(-30px);}
-}
-
-/* Smooth fade-in */
+/* Smooth fade-in main content */
 .fade-in {
   opacity: 0;
   transform: translateY(20px);
@@ -97,10 +84,8 @@ a:hover {
 </head>
 <body class="bg-gradient-to-br from-gray-100 to-white font-sans overflow-x-hidden">
 
-<!-- Loading Screen -->
-<div id="loading">
-  <img src="hi.png" alt="Logo"> <!-- Replace with your PNG -->
-</div>
+<!-- Logo stays on top-left -->
+<img id="logo" src="hi.png" alt="Logo">
 
 <div class="container mx-auto py-12 px-4 fade-in">
   <h1 class="text-4xl font-bold mb-12 text-center text-gray-800">#FUCKREII</h1>
@@ -281,20 +266,16 @@ a:hover {
 
 <script>
 window.addEventListener('load', () => {
-  const loading = document.getElementById('loading');
-  
-  // Trigger smooth fade-in of the logo
-  loading.classList.add('show');
-  
-  // Fade out loading screen after logo animation
+  const logo = document.getElementById('logo');
+  const mainContent = document.querySelector('.fade-in');
+
+  // Animate logo in
+  logo.classList.add('show');
+
+  // Animate main content AFTER logo pops in
   setTimeout(() => {
-    loading.style.opacity = '0';
-    setTimeout(() => loading.style.display = 'none', 600);
-    
-    // Fade in main content
-    const mainContent = document.querySelector('.fade-in');
     mainContent.classList.add('show');
-  }, 1500); // match the transition duration
+  }, 1500); // match logo transition
 });
 </script>
 </body>
