--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@ a:hover {
 
 <div class="container mx-auto py-12 px-4 fade-in">
   <h1 class="text-4xl font-bold mb-12 text-center text-gray-800">#FUCKREII</h1>
-  <h1 class="text-4xl font-bold mb-12 text-center text-gray-800">the website design will change in the future</h1>
+  <h1 class="text-4xl font-bold mb-12 text-center text-gray-800">The website design will change in the future.</h1>
+  <h1 class="text-4xl font-bold mb-12 text-center text-gray-800">Every social media is public, including the mail addresses.</h1>
 
   <!-- TheRebootedLily -->
   <details class="glass-card mb-6">
