image smaller too big

--- a/gallery.html
+++ b/gallery.html
@@ -71,7 +71,7 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
 <div class="container fade show">
   <h1>NOTHING RN!!!</h1>
   <div class="grid">
-    <img src="https://cdn.discordapp.com/attachments/1138196554180722843/1398017891802021888/giphy_13.gif?ex=68d397df&is=68d2465f&hm=cc66816f224cb05a59384c1a893d6e1eeeea733af8d8d3b4b3d207a2a39633e6&" alt="hi gu">
+<img src="https://cdn.discordapp.com/attachments/1138196554180722843/1398017891802021888/giphy_13.gif?ex=68d397df&is=68d2465f&hm=cc66816f224cb05a59384c1a893d6e1eeeea733af8d8d3b4b3d207a2a39633e6&" alt="hi gu" style="width:150px; height:auto;">
   </div>
 
   <a href="index.html" class="backBtn px-6 py-3 border border-white rounded-lg bg-transparent text-white font-semibold hover:bg-white hover:text-black">Back to Homepage</a>
