--- a/cards.html
+++ b/cards.html
@@ -257,7 +257,7 @@ button { transition:all 0.3s ease; margin-bottom:2rem; }
 </details>
 
   <!-- Back Button -->
-  <a href="index.html" class="backBtn">Back to Homepage</a>
+  <a href="index.html" class="backBtn">Back to Home</a>
 </div>
 
 </body>
