--- a/gallery.html
+++ b/gallery.html
@@ -65,12 +65,8 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
     <img src="https://cdn.discordapp.com/attachments/1138196554180722843/1398017891802021888/giphy_13.gif" alt="hi gu">
     <img src="https://bready.lol/public/rest/FUCKREII.gif" alt="reii the rat">
     <img src="https://media.discordapp.net/attachments/1368038505795555378/1420140293608574997/image.png?ex=68d45036&is=68d2feb6&hm=41be0b4ec50d82e7282e7e48c29ed6121d4c191131510e0950dc9fff152611b1&=&width=955&height=215" alt="hi gu">
-    <img src="https://media.discordapp.net/attachments/1368038505795555378/1419770663882981538/image.png?ex=68d44978&is=68d2f7f8&hm=396d2c4e4d1b8ebe997b1e8a5aa468203a1b6832a494149189de09b17144669e&=&width=1175&height=1070" alt="REPLACE">
+    <img src="https://media.discordapp.net/attachments/1368038505795555378/1419770663882981538/image.png?ex=68d44978&is=68d2f7f8&hm=396d2c4e4d1b8ebe99REPLACE7b1e8a5aa468203a1b6832a494149189de09b17144669e&=&width=1175&height=1070" alt="">
     <img src="https://media.discordapp.net/attachments/1368038505795555378/1419996053649756272/image.png?ex=68d3c9e1&is=68d27861&hm=3834bf9ca91ce138f0c4f01b3065450a3c5c5211ae012e43515f9dcba4399d9a&=&width=921&height=200" alt="REPLACE">
-    <img src="PASTE" alt="REPLACE">
-    <img src="PASTE" alt="REPLACE">
-    <img src="PASTE" alt="REPLACE">
-    <img src="PASTE" alt="REPLACE">
   </div>
 
   <a href="index.html" class="backBtn px-6 py-3 border border-white rounded-lg bg-transparent text-white font-semibold hover:bg-white hover:text-black">Back to Homepage</a>
