--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
 <div class="container fade show"> 
   <h1>silly images imagine saying the n word cuz u cant run a discord server/bubbablox</h1>
   <div class="grid">
-    <img src="https://cdn.discordapp.com/attachments/1138196554180722843/1398017891802021888/giphy_13.gif" alt="hi gu">
+    <img src="https://media.discordapp.net/attachments/1138196554180722843/1398017891802021888/giphy_13.gif?ex=68d4409f&is=68d2ef1f&hm=8f3c47b5cf3e60334f8db1fef258596ac0f154c60106f0756336864bf85df21b&=&width=563&height=563" alt="hi gu">
     <img src="https://bready.lol/public/rest/FUCKREII.gif" alt="reii the rat">
     <img src="https://media.discordapp.net/attachments/1368038505795555378/1420140293608574997/image.png?ex=68d45036&is=68d2feb6&hm=41be0b4ec50d82e7282e7e48c29ed6121d4c191131510e0950dc9fff152611b1&=&width=955&height=215" alt="hi gu">
     <img src="https://media.discordapp.net/attachments/1368038505795555378/1419770663882981538/image.png?ex=68d44978&is=68d2f7f8&hm=396d2c4e4d1b8ebe99REPLACE7b1e8a5aa468203a1b6832a494149189de09b17144669e&=&width=1175&height=1070" alt="">
