--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,10 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
     <img src="https://bready.lol/public/rest/FUCKREII.gif" alt="reii the rat">
     <img src="https://media.discordapp.net/attachments/1368038505795555378/1420140293608574997/image.png?ex=68d45036&is=68d2feb6&hm=41be0b4ec50d82e7282e7e48c29ed6121d4c191131510e0950dc9fff152611b1&=&width=955&height=215" alt="hi gu">
     <img src="https://media.discordapp.net/attachments/1368038505795555378/1420107937212272661/image.png?ex=68d43214&is=68d2e094&hm=3d306aae3bb0b8f8c918df49f03e790ca876b9314d91ae326e467c96db7d8035&=&width=1044&height=618" alt="uhm">
-  </div>
+    <img src="img/1.png" alt="uhm">
+    <img src="img/2.png" alt="uhm">
+    <img src="img/3.png" alt="uhm">
+    <img src="img/4.png" alt="uhm">
 
   <a href="index.html" class="backBtn px-6 py-3 border border-white rounded-lg bg-transparent text-white font-semibold hover:bg-white hover:text-black">Back to Homepage</a>
 </div>
