--- a/gallery.html
+++ b/gallery.html
@@ -71,6 +71,8 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
     <img src="img/3.png" alt="uhm">
     <img src="img/4.png" alt="uhm">
     <img src="img/5.png" alt="uhm">
+    <img src="img/6.png" alt="uhm">
+    <img src="img/7.png" alt="uhm">
 
   <a href="index.html" class="backBtn px-6 py-3 border border-white rounded-lg bg-transparent text-white font-semibold hover:bg-white hover:text-black">Back to Homepage</a>
 </div>
