--- a/gallery.html
+++ b/gallery.html
@@ -74,6 +74,8 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
     <img src="img/6.png" alt="uhm">
     <img src="img/7.png" alt="uhm">
 
+<section></section>
+
   <a href="index.html" class="backBtn px-6 py-3 border border-white rounded-lg bg-transparent text-white font-semibold hover:bg-white hover:text-black">Back to Homepage</a>
 </div>
 
