--- a/gallery.html
+++ b/gallery.html
@@ -73,6 +73,7 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
     <img src="img/5.png" alt="uhm">
     <img src="img/6.png" alt="uhm">
     <img src="img/7.png" alt="uhm">
+    <img src="img/8.gif" alt="uhm">
 
 <section></section>
 
