--- a/index.html
+++ b/index.html
@@ -81,5 +81,14 @@ button:hover,a:hover { background:#fff; color:#000; }
   </div>
 </section>
 
+<footer class="text-center py-4 bg-gray-900 text-white">
+  &copy; <span id="year"></span> LEVI & TALK. #FUCKREII
+</footer>
+
+<script>
+  // Auto-update year
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
