--- a/gallery.html
+++ b/gallery.html
@@ -80,5 +80,14 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
   <a href="index.html" class="backBtn px-6 py-3 border border-white rounded-lg bg-transparent text-white font-semibold hover:bg-white hover:text-black">Back to Homepage</a>
 </div>
 
+<footer class="text-center py-4 bg-gray-900 text-white">
+  &copy; <span id="year"></span> LEVI & TALK. #FUCKREII
+</footer>
+
+<script>
+  // Auto-update year
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
