--- a/gallery.html
+++ b/gallery.html
@@ -80,7 +80,7 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
   <a href="index.html" class="backBtn px-6 py-3 border border-white rounded-lg bg-transparent text-white font-semibold hover:bg-white hover:text-black">Back to Homepage</a>
 </div>
 
-<footer class="text-center py-4 bg-gray-900 text-white">
+<footer class="fixed bottom-0 left-0 w-full text-center py-3 bg-transparent text-white">
   &copy; <span id="year"></span> LEVI & TALK. #FUCKREII
 </footer>
 
