--- a/cards.html
+++ b/cards.html
@@ -260,7 +260,7 @@ button { transition:all 0.3s ease; margin-bottom:2rem; }
   <a href="index.html" class="backBtn">Back to Home</a>
 </div>
 
-<footer class="text-center py-4 bg-gray-900 text-white">
+<footer class="fixed bottom-0 left-0 w-full text-center py-3 bg-transparent text-white">
   &copy; <span id="year"></span> LEVI & TALK. #FUCKREII
 </footer>
 
