--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ button:hover,a:hover { background:#fff; color:#000; }
   </div>
 </section>
 
-<footer class="text-center py-4 bg-gray-900 text-white">
+<footer class="fixed bottom-0 left-0 w-full text-center py-3 bg-transparent text-white">
   &copy; <span id="year"></span> LEVI & TALK. #FUCKREII
 </footer>
 
