--- a/gallery.html
+++ b/gallery.html
@@ -74,6 +74,7 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
     <img src="img/6.png" alt="uhm">
     <img src="img/7.png" alt="uhm">
     <img src="img/8.gif" alt="uhm">
+    <img src="img/9.png" alt="uhm">
 
 <section></section>
 
