--- a/gallery.html
+++ b/gallery.html
@@ -61,10 +61,10 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
 
   <!-- Masonry Grid -->
   <div class="columns-1 sm:columns-2 md:columns-3 lg:columns-4 gap-4 space-y-4">
-    <img src="https://media.discordapp.net/attachments/1138196554180722843/1398017891802021888/giphy_13.gif" alt="hi gu" class="rounded-lg w-full mb-4 hover:scale-105 transition">
+    <img src="https://media.discordapp.net/attachments/1138196554180722843/1398017891802021888/giphy_13.gif?ex=68d4409f&is=68d2ef1f&hm=8f3c47b5cf3e60334f8db1fef258596ac0f154c60106f0756336864bf85df21b&=&width=563&height=563" alt="hi gu" class="rounded-lg w-full mb-4 hover:scale-105 transition">
     <img src="https://bready.lol/public/rest/FUCKREII.gif" alt="reii the rat" class="rounded-lg w-full mb-4 hover:scale-105 transition">
-    <img src="https://media.discordapp.net/attachments/1368038505795555378/1420140293608574997/image.png" alt="hi gu" class="rounded-lg w-full mb-4 hover:scale-105 transition">
-    <img src="https://media.discordapp.net/attachments/1368038505795555378/1420107937212272661/image.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
+    <img src="https://media.discordapp.net/attachments/1368038505795555378/1420140293608574997/image.png?ex=68d45036&is=68d2feb6&hm=41be0b4ec50d82e7282e7e48c29ed6121d4c191131510e0950dc9fff152611b1&=&width=955&height=215" alt="hi gu" class="rounded-lg w-full mb-4 hover:scale-105 transition">
+    <img src="https://media.discordapp.net/attachments/1368038505795555378/1420107937212272661/image.png?ex=68d43214&is=68d2e094&hm=3d306aae3bb0b8f8c918df49f03e790ca876b9314d91ae326e467c96db7d8035&=&width=1044&height=618" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
     <img src="img/1.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
     <img src="img/2.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
     <img src="img/3.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
