--- a/cards.html
+++ b/cards.html
@@ -76,7 +76,7 @@ button { transition:all 0.3s ease; margin-bottom:2rem; }
 <div class="container fade show">
   <h1 class="text-4xl font-bold mb-8 text-center">#FUCKREII</h1>
 
-  <!-- TheRebootedLily -->
+<!-- TheRebootedLily -->
 <details class="glass-card mb-6">
   <summary class="text-xl font-semibold cursor-pointer hover:text-blue-500">TheRebootedLily / RebootedLily</summary>
   <ul class="mt-4 space-y-3">
@@ -92,7 +92,7 @@ button { transition:all 0.3s ease; margin-bottom:2rem; }
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" class="platform-icon"/>
       <a href="#">CryptedLily</a>
     </li>
-</ul>
+  </ul>
 </details>
 
 <!-- Lallieh -->
@@ -106,6 +106,10 @@ button { transition:all 0.3s ease; margin-bottom:2rem; }
     <li class="flex items-center gap-3">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/tiktok.svg" class="platform-icon"/>
       <a href="https://www.tiktok.com/@bylallie">TikTok</a>
+    </li>
+    <li class="flex items-center gap-3">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/roblox.svg" class="platform-icon"/>
+      <a href="https://www.roblox.com/users/3452852993/profile">Roblox Profile</a>
     </li>
   </ul>
 </details>
@@ -160,17 +164,6 @@ button { transition:all 0.3s ease; margin-bottom:2rem; }
   </ul>
 </details>
 
-<!-- RebootedPoppy -->
-<details class="glass-card mb-6">
-  <summary class="text-xl font-semibold cursor-pointer hover:text-blue-500">RebootedPoppy / CryptedPoppy</summary>
-  <ul class="mt-4 space-y-3">
-    <li class="flex items-center gap-3">
-      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/roblox.svg" class="platform-icon"/>
-      <a href="https://www.roblox.com/users/65217781/profile">Roblox Profile</a>
-    </li>
-  </ul>
-</details>
-
 <!-- RitaTheDiva -->
 <details class="glass-card mb-6">
   <summary class="text-xl font-semibold cursor-pointer hover:text-blue-500">RitaTheDiva</summary>
@@ -188,16 +181,15 @@ button { transition:all 0.3s ease; margin-bottom:2rem; }
   <ul class="mt-4 space-y-3">
     <li class="flex items-center gap-3">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" class="platform-icon"/>      
-      <a href="https://www.youtube.com/@DollBaconn/">YouTube Channel</a>
+      <a href="https://www.youtube.com/@DollBaconn/shorts">YouTube Shorts</a>
     </li>
   </ul>
 </details>
 
-<!-- DollBaconn -->
+<!-- DollBaconn / DollieDeath -->
 <details class="glass-card mb-6">
   <summary class="text-xl font-semibold cursor-pointer hover:text-blue-500">DollBaconn / DollieDeath</summary>
   <ul class="mt-4 space-y-3">
-    </li>
     <li class="flex items-center gap-3">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" class="platform-icon"/>
       <a href="https://www.youtube.com/@DollieDeath/videos">YouTube Videos</a>
@@ -231,12 +223,20 @@ button { transition:all 0.3s ease; margin-bottom:2rem; }
       <a href="https://www.roblox.com/users/1842909217/profile">Roblox Profile</a>
     </li>
     <li class="flex items-center gap-3">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/roblox.svg" class="platform-icon"/>
+      <a href="https://www.roblox.com/users/8779582173/profile">Roblox Profile 2</a>
+    </li>
+    <li class="flex items-center gap-3">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/email.svg" class="platform-icon"/>
       <a href="mailto:shrimpxo@proton.me">Business Email</a>
     </li>
     <li class="flex items-center gap-3">
       <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/email.svg" class="platform-icon"/>
       <a href="mailto:puffywa@proton.me">Business Email 2</a>
+    </li>
+    <li class="flex items-center gap-3">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/email.svg" class="platform-icon"/>
+      <a href="mailto:businessdollie@gmail.com">Business Email 3</a>
     </li>
   </ul>
 </details>
