--- a/gallery.html
+++ b/gallery.html
@@ -76,6 +76,7 @@ h1 { text-align:center; font-size:3rem; margin-bottom:2rem; }
     <img src="img/9.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
     <img src="img/10.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
     <img src="img/11.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
+    <img src="img/12.png" alt="uhm" class="rounded-lg w-full mb-4 hover:scale-105 transition">
   </div>
 
   <a href="index.html" class="backBtn px-6 py-3 border border-white rounded-lg bg-transparent text-white font-semibold hover:bg-white hover:text-black mt-8 block text-center">
