--- a/admin.html
+++ b/admin.html
@@ -1,157 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Panel - Announcements</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Admin Panel - Announcements</title>
 
-  <script type="module">
-    // --- Import Firebase ---
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
-    import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
-    import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-database.js";
-    import { push } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-database.js";
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
+import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
+import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
+import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-database.js";
+import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-storage.js";
 
-    // --- Your Firebase Config ---
-    const firebaseConfig = {
-      apiKey: "AIzaSyC0jml1JcAoJziIB5iA-Ur7H3XpJdGhU44",
-      authDomain: "fuckreii.firebaseapp.com",
-      databaseURL: "https://fuckreii-default-rtdb.firebaseio.com",
-      projectId: "fuckreii",
-      storageBucket: "fuckreii.firebasestorage.app",
-      messagingSenderId: "206715883407",
-      appId: "1:206715883407:web:420200082c73c3134d45fa",
-      measurementId: "G-C72NKH2MYQ"
-    };
+// Firebase Config
+const firebaseConfig = {
+  apiKey: "AIzaSyC0jml1JcAoJziIB5iA-Ur7H3XpJdGhU44",
+  authDomain: "fuckreii.firebaseapp.com",
+  databaseURL: "https://fuckreii-default-rtdb.firebaseio.com",
+  projectId: "fuckreii",
+  storageBucket: "fuckreii.firebasestorage.app",
+  messagingSenderId: "206715883407",
+  appId: "1:206715883407:web:420200082c73c3134d45fa",
+  measurementId: "G-C72NKH2MYQ"
+};
 
-    // --- Init Firebase ---
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-    const auth = getAuth(app);
-    const db = getDatabase(app);
+// Init Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
+const auth = getAuth(app);
+const db = getDatabase(app);
+const storage = getStorage(app);
 
-    // --- DOM Elements ---
-    const loginForm = document.getElementById("login-form");
-    const announceForm = document.getElementById("announce-form");
-    const statusBox = document.getElementById("status");
+// Map emails to usernames
+const userNames = {
+  "admin@example.com": "Admin",
+  "other@example.com": "Mod",
+  // Add more emails and usernames here
+};
 
-    // --- Auth State Listener ---
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        statusBox.innerText = `✅ Logged in as ${user.email}`;
-        loginForm.style.display = "none";
-        announceForm.style.display = "block";
-      } else {
-        statusBox.innerText = "❌ Not logged in";
-        loginForm.style.display = "block";
-        announceForm.style.display = "none";
-      }
-    });
+// DOM Elements
+const loginForm = document.getElementById("login-form");
+const announceForm = document.getElementById("announce-form");
+const statusBox = document.getElementById("status");
+const messagesContainer = document.getElementById("messages-container");
+const fileInput = document.getElementById("image-file");
 
-    // --- Login Function ---
-    window.login = async function() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      try {
-        await signInWithEmailAndPassword(auth, email, password);
-      } catch (error) {
-        alert("Login failed: " + error.message);
-      }
-    };
+// Auth State Listener
+let currentUserName = "";
+onAuthStateChanged(auth, (user) => {
+  if (user) {
+    currentUserName = userNames[user.email] || user.email.split("@")[0];
+    statusBox.innerText = `✅ Logged in as ${currentUserName}`;
+    loginForm.style.display = "none";
+    announceForm.style.display = "block";
+    messagesContainer.style.display = "block";
+  } else {
+    statusBox.innerText = "❌ Not logged in";
+    loginForm.style.display = "block";
+    announceForm.style.display = "none";
+    messagesContainer.style.display = "none";
+  }
+});
 
-    // --- Logout ---
-    window.logout = async function() {
-      await signOut(auth);
-    };
+// Login
+window.login = async function() {
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+  try { await signInWithEmailAndPassword(auth, email, password); } 
+  catch (error) { alert("Login failed: " + error.message); }
+};
 
+// Logout
+window.logout = async function() { await signOut(auth); };
 
+// Post Announcement
 window.postAnnouncement = async function() {
   const msg = document.getElementById("message").value;
-  if (!msg.trim()) return alert("⚠️ Message cannot be empty!");
+  const file = fileInput.files[0];
+  if (!msg.trim() && !file) return alert("⚠️ Enter a message or choose an image!");
 
-  const user = auth.currentUser;
-  if (!user) return alert("⚠️ You are not logged in!");
+  let imageUrl = null;
+
+  if (file) {
+    const storageRef = sRef(storage, `announcements/${Date.now()}_${file.name}`);
+    await uploadBytes(storageRef, file);
+    imageUrl = await getDownloadURL(storageRef);
+  }
 
   try {
     await push(ref(db, "announcements"), {
       message: msg,
-      user: user.email,
+      image: imageUrl,
+      user: currentUserName,
       timestamp: Date.now()
     });
-    alert("📢 Announcement sent!");
     document.getElementById("message").value = "";
-  } catch (error) {
-    alert("Error: " + error.message);
-  }
+    fileInput.value = "";
+  } catch (error) { alert("Error: " + error.message); }
 };
 
-  </script>
+// Load past announcements
+const annRef = ref(db, "announcements");
+onChildAdded(annRef, (snapshot) => {
+  const data = snapshot.val();
+  if (!data) return;
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f8f9fa;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .container {
-      background: white;
-      padding: 20px 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      width: 320px;
-    }
-    h2 {
-      margin-top: 0;
-      text-align: center;
-    }
-    input, button, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 6px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-    }
-    button {
-      background: #007bff;
-      color: white;
-      cursor: pointer;
-      border: none;
-      transition: 0.2s;
-    }
-    button:hover {
-      background: #0056b3;
-    }
-    #status {
-      margin-bottom: 10px;
-      text-align: center;
-      font-weight: bold;
-    }
-  </style>
+  const card = document.createElement("div");
+  card.className = "message-card";
+  card.innerHTML = `
+    <strong>${data.user}</strong> - <em>${new Date(data.timestamp).toLocaleString()}</em>
+    <p>${data.message || ""}</p>
+    ${data.image ? `<img src="${data.image}" alt="Image" class="msg-image">` : ""}
+  `;
+  messagesContainer.prepend(card);
+});
+</script>
+
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #1a1a1a;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  min-height: 100vh;
+  margin: 0;
+  padding: 20px;
+  color: #fff;
+}
+.container {
+  background: #2c2c2c;
+  padding: 20px 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+  width: 400px;
+}
+h2 { text-align: center; margin-top:0; }
+input, button, textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 6px 0;
+  border-radius: 8px;
+  border: none;
+  font-size: 14px;
+}
+input, textarea { background: #444; color: #fff; }
+textarea { resize: vertical; min-height: 60px; }
+button {
+  background: #007bff;
+  color: white;
+  cursor: pointer;
+  border: none;
+  transition: 0.2s;
+}
+button:hover { background: #0056b3; }
+#status { text-align:center; font-weight:bold; margin-bottom:10px; }
+.message-card {
+  background: #333;
+  padding: 10px;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  word-break: break-word;
+}
+.message-card img.msg-image {
+  max-width: 100%;
+  margin-top: 5px;
+  border-radius: 5px;
+}
+#messages-container {
+  max-height: 300px;
+  overflow-y: auto;
+  margin-top: 10px;
+  display: none;
+}
+</style>
 </head>
 <body>
-  <div class="container">
-    <h2>Admin Panel</h2>
-    <p id="status">Checking login...</p>
+<div class="container">
+  <h2>Admin Panel</h2>
+  <p id="status">Checking login...</p>
 
-    <!-- Login Form -->
-    <div id="login-form" style="display:none;">
-      <input id="email" type="email" placeholder="Email">
-      <input id="password" type="password" placeholder="Password">
-      <button onclick="login()">Login</button>
-    </div>
-
-    <!-- Announcement Form -->
-    <div id="announce-form" style="display:none;">
-      <textarea id="message" placeholder="Write your announcement..."></textarea>
-      <button onclick="postAnnouncement()">Send Announcement</button>
-      <button onclick="logout()" style="background:#dc3545; margin-top:5px;">Logout</button>
-    </div>
+  <div id="login-form" style="display:none;">
+    <input id="email" type="email" placeholder="Email">
+    <input id="password" type="password" placeholder="Password">
+    <button onclick="login()">Login</button>
   </div>
+
+  <div id="announce-form" style="display:none;">
+    <textarea id="message" placeholder="Write your announcement..."></textarea>
+    <input type="file" id="image-file" accept="image/*">
+    <button onclick="postAnnouncement()">Send Announcement</button>
+    <button onclick="logout()" style="background:#dc3545; margin-top:5px;">Logout</button>
+    <div id="messages-container"></div>
+  </div>
+</div>
 </body>
 </html>
